--- a/index.html
+++ b/index.html
@@ -4,4 +4,14 @@
         <h1>This is my webpage</h1>
         <h2>and I just hosted it</h2>
     </body>
+    <style>
+        @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap");
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+            font-family: "Poppins", sans-serif;
+            transition: 0.5s;
+        }
+    </style>
 </html>
