--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
     <body>
-        <h1>This is my webpage</h1>
-        <h2>and I just hosted it</h2>
+        <div class="Title">
+            <h1>Shriyaans K</h1>
+            <h3>My Portfolio</h3>
+        </div>
     </body>
     <style>
         @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap");
@@ -13,5 +15,21 @@
             font-family: "Poppins", sans-serif;
             transition: 0.5s;
         }
+
+        .Title {
+            text-align: center;
+            justify-content: center;
+            box-shadow: 3px 7px 20px rgba(0, 0, 0, 0.2);
+            background-color: #1c7293;
+            height: 250px;
+        }
+
+        .Title h1 {
+            padding-top: 95px;
+            font-weight: 800;
+            color: #9eb3c2;
+            width: 100%;
+        }
+
     </style>
 </html>
