--- a/index.html
+++ b/index.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
 <html>
     <body>
-        <div class="Title">
-            <h1>Shriyaans K</h1>
-            <h3>My Portfolio</h3>
-        </div>
+        <svg id="visual" viewBox="0 0 900 600" width="900" height="600" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"><rect x="0" y="0" width="900" height="600" fill="#002233"></rect><path d="M0 469L21.5 475.8C43 482.7 86 496.3 128.8 502.8C171.7 509.3 214.3 508.7 257.2 489.3C300 470 343 432 385.8 428.7C428.7 425.3 471.3 456.7 514.2 467C557 477.3 600 466.7 642.8 450.3C685.7 434 728.3 412 771.2 406C814 400 857 410 878.5 415L900 420" fill="none" stroke-linecap="round" stroke-linejoin="miter" stroke="#0066FF" stroke-width="40"></path></svg>
     </body>
     <style>
         @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap");
@@ -16,18 +13,8 @@
             transition: 0.5s;
         }
 
-        .Title {
-            text-align: center;
-            justify-content: center;
-            box-shadow: 3px 7px 20px rgba(0, 0, 0, 0.2);
-            background-color: #1c7293;
-            height: 250px;
-        }
-
-        .Title h1 {
-            padding-top: 95px;
-            font-weight: 800;
-            color: #9eb3c2;
+        svg {
+            height: 100%;
             width: 100%;
         }
 
