--- a/index.html
+++ b/index.html
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html>
-    <body>
-        <svg id="visual" viewBox="0 0 900 600" width="900" height="600" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"><rect x="0" y="0" width="900" height="600" fill="#002233"></rect><path d="M0 469L21.5 475.8C43 482.7 86 496.3 128.8 502.8C171.7 509.3 214.3 508.7 257.2 489.3C300 470 343 432 385.8 428.7C428.7 425.3 471.3 456.7 514.2 467C557 477.3 600 466.7 642.8 450.3C685.7 434 728.3 412 771.2 406C814 400 857 410 878.5 415L900 420" fill="none" stroke-linecap="round" stroke-linejoin="miter" stroke="#0066FF" stroke-width="40"></path></svg>
-    </body>
+<head>
     <style>
         @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap");
         * {
@@ -14,9 +12,90 @@
         }
 
         svg {
+            height: 100%; /* Adjusted to fill the viewport height */
+            width: 100%; /* Adjusted to fill the viewport width */
+            z-index: 1;
+        }
+
+        .avatar {
+            width: 250px;
+            height: 250px;
+            position: absolute;
+            z-index: 100;
+            top: 400px; /* Adjust the vertical position */
+            left: 50px; /* Adjust the horizontal position */
+            background-image: url('https://creazilla-store.fra1.digitaloceanspaces.com/icons/3247990/user-icon-md.png');
+            background-size: cover;
+            border-radius: 50%; /* Making the image circular */
+        }
+
+        nav {
+            position: absolute;
+            width: 524px;
+            height: 50px;
+            border-radius: 8px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            z-index: 100;
+            top: 20px; /* Adjust the vertical position */
+            left: 50%; /* Centering the navigation */
+            transform: translateX(-50%);
+            background: #065a82;
+        }
+
+        nav a {
+            position: relative; /* Added semicolon */
+            display: inline-block;
+            font-size: 1em;
+            font-weight: 500;
+            color: #fff;
+            text-decoration: none;
+            padding: 0 23px;
+            margin: 0 10px; /* Added some space between links */
+            z-index: 1;
+        }
+
+        nav span {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 140px;
             height: 100%;
-            width: 100%;
+            background: linear-gradient(45deg, #21295c, #1b3b6f);
+            border-radius: 8px;
+            transition: .5s;
+        }
+
+        nav a:nth-child(1):hover~span
+        {
+            left: 0;
+        }
+
+        nav a:nth-child(2):hover~span
+        {
+            left: 110px;
+        }
+
+        nav a:nth-child(1):hover~span
+        {
+            left: 0;
         }
 
     </style>
+</head>
+<body>
+    <svg id="visual" viewBox="0 0 900 600" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1">
+        <rect x="0" y="0" width="900" height="600" fill="#002233"></rect>
+        <path d="M0 469L21.5 475.8C43 482.7 86 496.3 128.8 502.8C171.7 509.3 214.3 508.7 257.2 489.3C300 470 343 432 385.8 428.7C428.7 425.3 471.3 456.7 514.2 467C557 477.3 600 466.7 642.8 450.3C685.7 434 728.3 412 771.2 406C814 400 857 410 878.5 415L900 420" fill="none" stroke-linecap="round" stroke-linejoin="miter" stroke="#0066FF" stroke-width="40"></path>
+    </svg>
+    <div class="avatar"></div>
+    <nav>
+        <a href="#">Home</a>
+        <a href="#">About</a>
+        <a href="#">Profession</a>
+        <a href="#">Contact</a>
+        <span></span>
+    </nav>
+</body>
 </html>
