--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         body {
             display: flex;
             justify-content: center;
+            overflow: hidden;
 
         }
 
@@ -303,6 +304,47 @@
                 }
         }
 
+        .wrapper a {
+            display: block;
+            position: absolute;
+            z-index: 200;
+            text-decoration: none;
+            width: 300px;
+            color: #0066FF;
+            height: 100px;
+            border: #000;
+            color: #fff;
+            font-size: 20px;
+            font-weight: 500;
+            text-transform: uppercase;
+            border-radius: 5000px;
+            margin-left: 25px;
+            margin-top: 10px;
+        }
+
+        .wrapper .contact {
+            border: 5px solid #000;
+            border-radius: 5000px;
+            width: 200px;
+            height: 60px;
+            background-color: #065a82;
+            margin-top: 30px;
+        }
+
+        @keyframes load-in1 {
+            from {
+                opacity: 0;
+                top: 500px; /* Start from bottom */
+            }
+            to {
+                opacity: 1;
+                top: 400; /* Settle at final position */
+            }
+        }
+
+        .avatar {
+            animation: load-in1 1s ease-in-out forwards;
+        }
 
     </style>
 </head>
@@ -313,10 +355,10 @@
     </svg>
     <div class="avatar"></div>
     <nav class="pc">
-        <a href="#">Home</a>
-        <a href="#">About</a>
-        <a href="#">Profession</a>
-        <a href="#">Contact</a>
+        <a href="index.html">Home</a>
+        <a href="About.html">About</a>
+        <a href="Proffesion.html">Profession</a>
+        <a href="mailto:shriyaansknaidu2@gmail.com">Contact</a>
         <span></span>
     </nav>
     <nav class="hamburger">
@@ -344,6 +386,9 @@
         </div>
         <p>Hello My name is Shriyaans K I am a Devops Developer, Frontend Developer, and Web developer</p>
         <p>you can press contact me to contact me</p>
+        <div class="contact">
+            <a href="mailto:shriyaansknaidu2@gmail.com" class="btn btn--contact">Contact Me</a>
+        </div>
     </div>
     <div class="loader"></div>
 </body>
