--- a/Proffesion.html
+++ b/Proffesion.html
@@ -373,7 +373,7 @@
     <nav class="pc">
         <a href="index.html">Home</a>
         <a href="About.html">About</a>
-        <a href="Proffesion.html">Skills</a>
+        <a href="Proffesion.html">Proffesion</a>
         <a href="mailto:shriyaansknaidu2@gmail.com">Contact</a>
         <span></span>
     </nav>
